2000-01-27  Christopher Faylor  <cgf@cygnus.com>

	* win32-nat.c (child_xfer_memory): Add missing argument required by
	2001-01-23 change.

2001-01-27  Mark Kettenis  <kettenis@gnu.org>

	* ui-out.c (do_list_end): New function.
	(make_cleanup_ui_out_list_end): New function.
	* ui-out.h: Provide prototype for make_cleanup_ui_out_list_end.
	* stack.c (print_frame) [UI_OUT]: Call
	make_cleanup_ui_out_list_end to make sure we mark the end of the
	list if we do a non-local exit.  At the end of the function,
	instead of calling ui_out_list_end directly, let do_cleanups
	handle it.

2001-01-26  Fernando Nasser  <fnasser@redhat.com>

	Fix double parsing of filenames passed as command line arguments
	to GDB (causes weird handling of escape characters).
	Also, remove dependencies on the CLI from libgdb.
	* call-cmds.h: Remove declaration of exec_file_command().
	* gdbcore.h: Remove declaration of exec_file_command().
	Add declarations for exec_open() and exec_file_clear().
	* symfile.h: Add declarations for symbol_file_add_main() and
	symbol_file_clear().
	* exec.c (exec_open): New function. Implements to_open for exec
	targets.
	(exec_file_clear): New function. Makes GDB forget about a previously
	specified executable file.
	(exec_file_attach): Move parsing of arguments from here ...
	(exec_file_command): ... to here.
	(init_exec_ops): Use exec_open(), not exec_file_command() to
	implement to_open for exec targets.
	* symfile.c (symbol_file_add_main): New function. Call symbol_file_add()
	with default values.  Used when the file name has already been parsed.
	(symbol_file_clear): New function. Makes GDB forget about previously
	read symbols.
	(symbol_file_command): Call the above function instead of inline code.
	* main.c: Include "symfile.h" and "gdbcore.h" instead of the deprecated
	"call-cmds.h".
	(captured_main): Call exec_file_attach() and symbol_file_add_main()
	instead of exec_file_command() and symbol_file_command().
	(captured_main): Add comment.