@@ -1,0 +1,57 @@
+/* gdb-gnats gdb/15 */
+
+struct tag_00 * tag_00 (int a0)
+{
+  return 0;
+}
+
+int
+main ()
+{
+#ifdef usestubs
+  set_debug_traps ();
+  breakpoint ();
+#endif
+
+  tag_00( 0 );
+  return 0;
+}
+
+int sym_0;
+int sym_1;
+int sym_2;
+int sym_3;
+int sym_4;
+int sym_5;
+int sym_6;
+int sym_7;
+int sym_8;
+int sym_9;
+int sym_10;
+int sym_11;
+int sym_12;
+int sym_13;
+int sym_14;
+int sym_15;
+int sym_16;
+int sym_17;
+int sym_18;
+int sym_19;
+int sym_20;
+int sym_21;
+int sym_22;
+int sym_23;
+int sym_24;
+int sym_25;
+int sym_26;
+int sym_27;
+int sym_28;
+int sym_29;
+int sym_30;
+int sym_31;
+int sym_32;
+int sym_33;
+int sym_34;
+int sym_35;
+int sym_36;
+int sym_37;
